--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
   <div class="card-container">
     <img src="./assets/images/illustration-article.svg" alt="">
     <div class="informacion-container">
-      <h4 class="Learning"> Learning </h4>
+      <div class="category">
+        <p class="Learning"> Learning </p>
+      </div>
       <p class="publishdate"> Published 21 Dec 2023 </p>
       <h1 class="title"> HTML & CSS foundations </h1>
       <p class="descripcion"> These languages are the backbone of every website, defining structure, content, and
